[project]
name = "visual-understand-mcp"
version = "0.1.1"
description = "视觉理解 MCP Server - 为不支持视觉的编码模型提供图片理解能力"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]",
    "httpx",
]

authors = [
    { name = "xc" }
]

keywords = [
    "mcp",
    "vision",
    "image-recognition",
    "visual-understanding",
]

classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.scripts]
visual-understand-mcp = "visual_understand_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/visual_understand_mcp"]
